--- a/mythof5/src/main/resources/messages.yml
+++ b/mythof5/src/main/resources/messages.yml
@@ -54,6 +54,17 @@ commands:
     name_required: "부대 이름을 입력해주세요."
     player_not_online: "해당 플레이어는 온라인이 아닙니다."
     cannot_invite_self: "자기 자신은 초대할 수 없습니다."
+  hunter:
+    usage:
+      - "{label} quest <accept|complete>"
+      - "{label} status [플레이어]"
+      - "{label} craft <종류> <출처> <등급> <이름...>"
+      - "{label} ability <매개체> <능력코드>"
+      - "{label} patch <매개체>"
+      - "{label} rebind <매개체>"
+      - "{label} paradox <summon|offer>"
+      - "{label} admin <subcommand> ..."
+      - "{label} test <subcommand> ..."
 squad:
   already_in_squad: "이미 다른 부대에 소속되어 있습니다."
   name_taken: "이미 존재하는 부대 이름입니다."
@@ -78,6 +89,74 @@ squad:
   status_count: "인원: {count}/{max} (온라인 {online})"
   status_members: "부대원: {members}"
   friendly_fire_blocked: "부대원에게 피해를 줄 수 없습니다."
+hunter:
+  status:
+    header: "[사냥꾼] 봉인 평균 {integrity} · 매개체 {artifacts}개"
+    summary: "• {name} - {engraved} / 전조 {omen} / 봉헌 {paradox}"
+    engraved: "사냥꾼 각인"
+    not_engraved: "각인 전"
+    artifact: "  - {name} ({grade}) [{state}] 봉인 {integrity}"
+    ability: "    · {ability} ({key}) 게이지 {gauge} · 쿨 {cooldown}s"
+  quest:
+    accept: "역설의 도깨비가 내민 사냥꾼 시험을 받아들였다."
+    already: "이미 사냥꾼 시험이 진행 중이다."
+    not_ready: "먼저 역설의 도깨비를 찾아 시험을 받아야 한다."
+    already_hunter: "이미 사냥꾼 각인이 새겨져 있다."
+    complete: "사냥꾼 각인이 새겨지며 다른 길이 봉인되었다."
+  error:
+    not_hunter: "사냥꾼 각인을 지닌 자만 사용할 수 있다."
+    broken: "봉인이 붕괴되어 힘을 다룰 수 없다."
+    not_broken: "해당 봉인은 이미 안정 상태다."
+    artifact_not_found: "해당 봉인 매개체를 찾을 수 없다."
+    ability_not_found: "해당 능력은 매개체에 봉인되어 있지 않다."
+    patch_broken: "붕괴된 매개체에는 봉인지를 사용할 수 없다."
+    no_profile: "기록된 사냥꾼이 없다."
+    invalid_number: "숫자 형식이 올바르지 않다."
+    invalid_uuid: "올바른 ID 형식이 아니다."
+    no_paradox: "역설 의식을 제어할 도구가 아직 준비되지 않았다."
+  default_ability: "봉인된 격류"
+  default_ability_desc: "{name}에 깃든 정기를 순간적으로 분출한다."
+  ability:
+    result: "매개체 {name}의 {ability} 사용 → 봉인 {integrity} · 해방확률 {chance} · 주사위 {roll} → {release}"
+    release: "봉인이 붕괴했다!"
+    safe: "봉인이 간신히 버텼다."
+  patch:
+    result: "{name}의 봉인 게이지가 {integrity}까지 낮아졌다."
+  artifact:
+    crafted: "새로운 봉인 매개체 {name}({grade}/{type})가 손에 쥐어졌다."
+    resealed: "{name}의 봉인이 다시 잠겼다."
+  death:
+    penalty: "죽음의 충격으로 봉인이 흔들렸다."
+  paradox:
+    busy: "이미 다른 봉헌 의식이 진행 중이다."
+    require_mythic: "태초 신화 매개체 {count}/5개로는 봉헌을 시작할 수 없다."
+    ritual_roll: "봉헌 판정: 성공 {chance} · 굴림 {roll}"
+    success: "봉헌이 완수되어 세계가 초기화된다!"
+    failure: "봉헌이 실패하여 역설이 폭주한다! 위협 배수 x{scale}"
+    cancelled: "봉헌이 중단되었다: {reason}"
+  admin:
+    give: "{player}에게 {name}을(를) 부여했다."
+    force_release: "{player}의 {name} 봉인을 강제로 해제했다."
+    patch: "{player}의 {name} 봉인 상태: {integrity}"
+    reset: "{player}의 사냥꾼 진행도를 초기화했다."
+  usage:
+    craft: "사용법: /hunter craft <종류> <출처> <등급> <이름...>"
+    ability: "사용법: /hunter ability <매개체> <능력코드>"
+    patch: "사용법: /hunter patch <매개체>"
+    rebind: "사용법: /hunter rebind <매개체>"
+    paradox: "사용법: /hunter paradox <summon|offer>"
+    admin: "사용법: /hunter admin <give|release|patch|reset> ..."
+    admin_give: "사용법: /hunter admin give <플레이어> <종류> <출처> <등급> <이름...>"
+    admin_release: "사용법: /hunter admin release <플레이어> <매개체>"
+    admin_patch: "사용법: /hunter admin patch <플레이어> <매개체> <값>"
+    admin_reset: "사용법: /hunter admin reset <플레이어>"
+    test: "사용법: /hunter test <create|list|remove> ..."
+    test_remove: "사용법: /hunter test remove <id>"
+  test:
+    created: "테스트 훅이 생성되었다. ID: {id}"
+    empty: "등록된 테스트 훅이 없다."
+    entry: "- {id} · {name} (작성: {creator})"
+    removed: "테스트 훅 {id}을(를) 제거했다."
 broadcast:
   boss_spawn: "[방송] {name}가 나타났다!"
   squad_created: "[방송] {player}가 부대 {squad}을(를) 창설했습니다."
@@ -85,6 +164,12 @@ broadcast:
   squad_left: "[방송] {player}가 부대 {squad}에서 탈퇴했습니다."
   squad_disbanded: "[방송] 부대 {squad}이(가) 해산되었습니다."
   goblin_inherit: "[방송] {player}가 {aspect}의 힘을 계승했다!"
+  hunter_engraved: "[방송] {player}가 사냥꾼 각인을 받아들였다!"
+  hunter_release: "[방송] {player}의 봉인이 붕괴되어 도깨비가 해방되었다!"
+  hunter_paradox_summon: "[방송] {player}가 역설의 도깨비를 불러냈다 — {world} {x} {y} {z}"
+  hunter_paradox_ritual: "[방송] {player}가 역설 봉헌 의식을 시작했다!"
+  hunter_paradox_success: "[방송] {player}가 봉헌을 완수해 세계가 초기화된다!"
+  hunter_paradox_failure: "[방송] {player}의 봉헌이 실패하여 역설이 폭주한다!"
 inherit:
   previous_replaced: "도깨비의 힘이 다른 계승자에게 이전되었습니다."
   broadcast:
@@ -228,6 +313,11 @@ chronicle:
     relic_gain: "작은 설화 하나가 새로이 깃들었도다."
     relic_fusion: "설화가 합쳐져 기묘한 기운이 솟았도다."
     omen: "세상에 전조가 일어났도다."
+    hunter_engrave: "사냥꾼 각인이 어딘가에서 새겨졌도다."
+    hunter_artifact: "사냥꾼의 봉인 매개체 하나가 만들어졌도다."
+    hunter_burned: "연대기가 불타오르는 소식이 들려왔도다."
+    hunter_release: "사냥꾼의 봉인이 깨져 도깨비가 풀려났도다."
+    hunter_reset: "역설 봉헌이 전 서버의 운명을 뒤흔들었도다."
   inherit:
     transfer: "{killer}, {victim}을 꺾고 {aspect}의 힘을 차지하였도다."
     obtain: "{player}, {aspect}의 힘을 얻기 위해 {method}를 이루었도다."
@@ -241,6 +331,15 @@ chronicle:
     use: "{player}, {aspect}의 권능 '{skill}'을 펼쳤도다."
   omen: "{stage}의 전조가 드러났으니, {reason}라 하도다."
   inherit_loss: "{player}, {aspect}과의 인연이 끊어졌도다."
+  hunter:
+    quest: "{player}, 역설의 도깨비가 낸 사냥꾼 시험을 받아들였도다."
+    engraved: "{player}, 사냥꾼 각인을 받아 다른 길을 봉인하였도다."
+    artifact: "{player}, {grade} 등급 {type} '{name}'에 도깨비 정수를 봉인하였도다."
+    burned: "사냥꾼이 설화를 불태워 연대기가 공백을 남겼도다."
+    release: "{player}, '{artifact}'의 봉인을 깨뜨려 도깨비를 불러냈도다."
+    ritual_started: "{player}, 역설 봉헌 의식을 시작하여 세계가 숨을 죽였도다."
+    reset_success: "{player}, 역설 봉헌을 완수하여 세계를 리셋하였도다."
+    reset_failure: "{player}, 역설 봉헌에 실패하여 역설이 폭주하였도다."
 commands.admin:
   usage:
     - "{label} admin spawnboss <엔티티타입> <이름> [hp] [armor] [world] [x y z]"
