--- a/mythof5/src/main/resources/messages.yml
+++ b/mythof5/src/main/resources/messages.yml
@@ -160,6 +160,7 @@ hunter:
     ability_not_found: "해당 능력은 매개체에 봉인되어 있지 않다."
     patch_broken: "붕괴된 매개체에는 봉인지를 사용할 수 없다."
     no_profile: "기록된 사냥꾼이 없다."
+    is_inheritor: "도깨비 계승자는 사냥꾼의 길을 택할 수 없습니다."
     invalid_number: "숫자 형식이 올바르지 않다."
     invalid_uuid: "올바른 ID 형식이 아니다."
     no_paradox: "역설 의식을 제어할 도구가 아직 준비되지 않았다."
