Streamline myth command shortcuts

--- a/mythof5/src/main/resources/messages.yml
+++ b/mythof5/src/main/resources/messages.yml
@@ -31,7 +31,7 @@ commands:
     boss_list_empty: "활성화된 보스가 없습니다."
     boss_list_header: "==== 활성 보스 ===="
     boss_list_entry: "#{id} {name} ({type}) - HP {health}, 위치 {location}"
-    end_usage: "사용법: /{label} admin endboss <bossId>"
+    end_usage: "사용법: /{label} boss end <bossId>"
     invalid_boss_id: "bossId는 숫자여야 합니다."
     end_success: "보스를 종료했습니다."
     end_not_found: "해당 ID의 보스를 찾을 수 없습니다."
@@ -431,28 +431,28 @@ commands.admin:
   usage:
     - "{label} help"
     - "{label} guide"
-    - "{label} admin spawnboss <엔티티타입> <이름> [hp] [armor] [world] [x y z]"
-    - "{label} admin bosslist"
-    - "{label} admin endboss <bossId>"
-    - "{label} admin inherit <갈래> <플레이어>"
-    - "{label} admin clearinherit <갈래>"
-    - "{label} admin relic <give|remove> <플레이어> <설화>"
-    - "{label} admin chronicle [개수]"
-    - "{label} admin omen <단계> [사유]"
-    - "{label} admin balance"
-  inherit_usage: "사용법: /myth admin inherit <갈래> <플레이어>"
+    - "{label} boss spawn <엔티티타입> <이름> [hp] [armor] [world] [x y z]"
+    - "{label} boss list"
+    - "{label} boss end <bossId>"
+    - "{label} inherit set <갈래> <플레이어>"
+    - "{label} inherit clear <갈래>"
+    - "{label} relic <give|remove> <플레이어> <설화>"
+    - "{label} chronicle [개수]"
+    - "{label} omen <단계> [사유]"
+    - "{label} balance [report|export]"
+  inherit_usage: "사용법: /myth inherit set <갈래> <플레이어>"
   inherit_success: "{player}에게 {aspect}의 힘을 부여했습니다."
-  clear_usage: "사용법: /myth admin clearinherit <갈래>"
+  clear_usage: "사용법: /myth inherit clear <갈래>"
   clear_success: "{aspect}의 계승자를 초기화했습니다."
-  relic_usage: "사용법: /myth admin relic <give|remove> <플레이어> <설화>"
+  relic_usage: "사용법: /myth relic <give|remove> <플레이어> <설화>"
   relic_duplicate: "이미 해당 설화를 보유하고 있습니다."
   relic_grant: "{player}에게 {relic}을(를) 부여했습니다."
   relic_removed: "{player}에게서 {relic}을(를) 회수했습니다."
   relic_not_owned: "해당 설화를 보유하고 있지 않습니다."
-  omen_usage: "사용법: /myth admin omen <STARSHIFT|GHOST_FIRE|SKYBREAK> [사유]"
+  omen_usage: "사용법: /myth omen <STARSHIFT|GHOST_FIRE|SKYBREAK> [사유]"
   omen_unknown: "알 수 없는 전조 단계입니다."
   omen_triggered: "{stage} 전조를 호출했습니다. 사유: {reason}"
-  balance_hint: "/myth admin balance report 또는 export 로 상세 통계를 확인하세요."
+  balance_hint: "/myth balance report 또는 export 로 상세 통계를 확인하세요."
   balance_export: "밸런스 리포트를 {path} 파일로 내보냈습니다."
   balance_export_fail: "밸런스 리포트 내보내기에 실패했습니다."
   balance_unknown: "알 수 없는 밸런스 하위 명령입니다."
