Enhance rift lifecycle feedback and theme flavor

--- a/mythof5/src/main/resources/plugin.yml
+++ b/mythof5/src/main/resources/plugin.yml
@@ -22,3 +22,6 @@ commands:
   seal:
     description: Weapon sealing interface
     usage: /seal
+  rift:
+    description: Rift activation and navigation commands
+    usage: /rift <subcommand>
